--- a/jnshu/mytask2/index.less
+++ b/jnshu/mytask2/index.less
@@ -29,48 +29,48 @@ a{
 // 媒体查询
 
 html { 
-    font-size: round( @scale*270px );
+    font-size: @scale*270px;
 }
 @media (min-width:320px){
   html{
-    font-size: round( @scale*320px );
+    font-size: @scale*320px;
   }
 }
 @media (min-width:360px){
   html{
-    font-size: round( @scale*360px );
+    font-size: @scale*360px;
   }
 }
 @media (min-width:412px){
   html{
-    font-size: round( @scale*412px );
+    font-size: @scale*412px;
   }
 }
 @media (min-width:480px){
   html{
-    font-size: round( @scale*480px );
+    font-size: @scale*480px;
   }
 }
 @media (min-width:640px){
   html{
-    font-size: round( @scale*640px );
+    font-size: @scale*640px;
   }
 }
-@media (min-width:720px){
-  html{
-    font-size: round( @scale*720px );
-  }
-}
-@media (min-width:768px){
-  html{
-    font-size: round( @scale*768px );
-  }
-}
-@media (min-width:1349px){
-  html{
-    font-size: round( @scale*1349px );
-  }
-}
+// @media (min-width:720px){
+//   html{
+//     font-size: @scale*720px;
+//   }
+// }
+// @media (min-width:768px){
+//   html{
+//     font-size: @scale*768px;
+//   }
+// }
+// @media (min-width:1349px){
+//   html{
+//     font-size: @scale*1349px;
+//   }
+// }
 
 // 不带参数的混和样式
 
@@ -100,70 +100,75 @@ html {
 header{
 	font-family: "Microsoft YaHei";
 	font-size: 20/@fontsize*1rem;
+	text-align: center;
 	height: 18/@fontsize*1rem;
 	line-height: 18/@fontsize*1rem;
 	padding: 11/@fontsize*1rem 12/@fontsize*1rem;
 	background: #331409;
 
-	ul, span, img{
-		display:inline-block;
-	}
+	.head_box{
 
-	.dot_list li{
-		width: 10/@fontsize*1rem;
-		height: 10/@fontsize*1rem;
-		margin-right: 3/@fontsize*1rem;
-		border-radius: 50%;
-		float:left;
+		float: left;
 
-		// 带参数的混和
-		// 
-		// // 方法一：用border和背景颜色构成小圆圈
+		ul, span, img{
+			display:inline-block;
+		}
 
-		// .background( @color: #fff, @border: transparent ){
-		// 	background-color: @color;
-		// 	border: 1px solid @border;
-		// }
+		.dot_list li{
+			width: 10/@fontsize*1rem;
+			height: 10/@fontsize*1rem;
+			margin-right: 3/@fontsize*1rem;
+			border-radius: 50%;
+			float:left;
 
-		// &:nth-child(1),&:nth-child(2),&:nth-child(3){
-		// 	.background();
-		// }
+			// 带参数的混和
+			// 
+			// // 方法一：用border和背景颜色构成小圆圈
 
-		// &:nth-child(4),&:nth-child(5){
-		// 	.background( transparent, #fff );
-		// }
-		
-		// // 	方法二：用背景图构成小圆圈
-		// // 	
-		.background( @pic:1 ){
-			background: url('../images/task3_dot_0@{pic}.png') no-repeat center;
-			background-size: 100% 100%;
+			// .background( @color: #fff, @border: transparent ){
+			// 	background-color: @color;
+			// 	border: 1px solid @border;
+			// }
+
+			// &:nth-child(1),&:nth-child(2),&:nth-child(3){
+			// 	.background();
+			// }
+
+			// &:nth-child(4),&:nth-child(5){
+			// 	.background( transparent, #fff );
+			// }
+			
+			// // 	方法二：用背景图构成小圆圈
+			// // 	
+			.background( @pic:1 ){
+				background: url('../images/task3_dot_0@{pic}.png') no-repeat center;
+				background-size: 100% 100%;
+
+			}
+
+			&:nth-child(1),&:nth-child(2),&:nth-child(3){
+				.background();
+			}
+
+			&:nth-child(4),&:nth-child(5){
+				.background( 2 );
+			}
 
 		}
 
-		&:nth-child(1),&:nth-child(2),&:nth-child(3){
-			.background();
+		.signal_box{
+			width: 25/@fontsize*1rem;
+			height: 18/@fontsize*1rem;
+			.head_signal{
+				.img;
+			}
 		}
 
-		&:nth-child(4),&:nth-child(5){
-			.background( 2 );
-		}
-
-	}
-
-	.signal_box{
-		width: 25/@fontsize*1rem;
-		height: 18/@fontsize*1rem;
-		margin: 0 3/@fontsize*1rem;
-		.head_signal{
-			.img;
-		}
 	}
 
 	.head_time{
 		font-weight: bold;
 		font-size: 24/@fontsize*1rem;
-		margin-left: 48/@fontsize*1rem;
 	}
 
 	.battery{
