--- a/about/index.less
+++ b/about/index.less
@@ -28,34 +28,33 @@ a{
 // 媒体查询
 
 html { 
-	// font-size: @scale*270px;
-	font-size: @scale*640px;
+	font-size: @scale*270px;
 }
-// @media (min-width:320px){
-//   	html{
-// 		font-size: @scale*320px;
-//   	}
-// }
-// @media (min-width:360px){
-//   	html{
-// 		font-size: @scale*360px;
-//   	}
-// }
-// @media (min-width:412px){
-//   	html{
-// 		font-size: @scale*412px;
-//   	}
-// }
-// @media (min-width:480px){
-//   	html{
-// 		font-size: @scale*480px;
-//   	}
-// }
-// @media (min-width:640px){
-//   	html{
-// 		font-size: @scale*640px;
-//   	}
-// }
+@media (min-width:320px){
+  	html{
+		font-size: @scale*320px;
+  	}
+}
+@media (min-width:360px){
+  	html{
+		font-size: @scale*360px;
+  	}
+}
+@media (min-width:412px){
+  	html{
+		font-size: @scale*412px;
+  	}
+}
+@media (min-width:480px){
+  	html{
+		font-size: @scale*480px;
+  	}
+}
+@media (min-width:640px){
+  	html{
+		font-size: @scale*640px;
+  	}
+}
 // @media (min-width:720px){
 //   	html{
 // 		font-size: @scale*720px;
@@ -106,12 +105,12 @@ html {
 	display: flex;
 	flex-flow: column nowrap;
 	justify-content: flex-start;
-	// align-items: center;
     padding-top: 80/@size;
     font-family: "微软雅黑", sans-serif;
     background-color: @bcolor;
     box-shadow: inset 0 5px 5px #333, inset 0 -5px  5px #666, inset 5px 0  5px #474747, inset -5px 0  5px #474747;
     border-radius: 20px;
+    margin-top: -250/@size;
 
 }
 
