--- a/about/index.less
+++ b/about/index.less
@@ -105,12 +105,12 @@ html {
 	display: flex;
 	flex-flow: column nowrap;
 	justify-content: flex-start;
-    padding-top: 80/@size;
+    margin-top: -250/@size;
+    padding-top: 112/@size;
     font-family: "微软雅黑", sans-serif;
     background-color: @bcolor;
     box-shadow: inset 0 5px 5px #333, inset 0 -5px  5px #666, inset 5px 0  5px #474747, inset -5px 0  5px #474747;
     border-radius: 20px;
-    margin-top: -250/@size;
 
 }
 
@@ -172,8 +172,8 @@ html {
 	} // .h_center end
 
   	.h_info{
-		margin-top: 62/@size;
-		width: 780/@size;
+		margin: 62/@size 0 0 80/@size;
+		width: 700/@size;
 		height: 562/@size;
 		overflow: hidden;
 		font-size: 38/@size;
@@ -210,7 +210,6 @@ html {
 
 		p{
 			font-size: 62.5/@size;
-			font-family: "华文楷体",sans-serif;
 			color: @wcolor;
 			line-height: 87.5/@size;
 			text-align: left;
@@ -269,7 +268,6 @@ html {
 	.m_cont{
 		display: flex;
 		justify-content: center;
-		// padding-bottom: 125/@size;
 		border-bottom: 5/@size dashed @gcolor;
 		margin: 0 250/@size;
 
@@ -283,6 +281,7 @@ html {
 			color: @rcolor;
 			letter-spacing: 62.5/@size;
 			text-align: center;
+			flex-shrink: 0;
 		}
 
 		.m_detail{
