--- a/about/index.less
+++ b/about/index.less
@@ -55,26 +55,26 @@ html {
 		font-size: @scale*640px;
   	}
 }
-// @media (min-width:720px){
-//   	html{
-// 		font-size: @scale*720px;
-//   	}
-// }
-// @media (min-width:768px){
-//   	html{
-// 		font-size: @scale*768px;
-//   	}
-// }
-// @media (min-width:1024px){
-//   	html{
-// 		font-size: @scale*1024px;
-//   	}
-// }
-// @media (min-width:1349px){
-//   	html{
-// 		font-size: @scale*1349px;
-//   	}
-// }
+@media (min-width:720px){
+  	html{
+		font-size: @scale*720px;
+  	}
+}
+@media (min-width:768px){
+  	html{
+		font-size: @scale*768px;
+  	}
+}
+@media (min-width:1024px){
+  	html{
+		font-size: @scale*1024px;
+  	}
+}
+@media (min-width:1349px){
+  	html{
+		font-size: @scale*1349px;
+  	}
+}
 
 // 不带参数的混和样式
 
