--- a/about/index.less
+++ b/about/index.less
@@ -28,23 +28,24 @@ a{
 // 媒体查询
 
 html { 
-	font-size: @scale*270px;
+	// font-size: @scale*270px;
+	font-size: @scale*412px;
 }
-@media (min-width:320px){
-  	html{
-		font-size: @scale*320px;
-  	}
-}
-@media (min-width:360px){
-  	html{
-		font-size: @scale*360px;
-  	}
-}
-@media (min-width:412px){
-  	html{
-		font-size: @scale*412px;
-  	}
-}
+// @media (min-width:320px){
+//   	html{
+// 		font-size: @scale*320px;
+//   	}
+// }
+// @media (min-width:360px){
+//   	html{
+// 		font-size: @scale*360px;
+//   	}
+// }
+// @media (min-width:412px){
+//   	html{
+// 		font-size: @scale*412px;
+//   	}
+// }
 @media (min-width:480px){
   	html{
 		font-size: @scale*480px;
@@ -65,16 +66,16 @@ html {
 		font-size: @scale*768px;
   	}
 }
-@media (min-width:1024px){
-  	html{
-		font-size: @scale*1024px;
-  	}
-}
-@media (min-width:1349px){
-  	html{
-		font-size: @scale*1349px;
-  	}
-}
+// @media (min-width:1024px){
+//   	html{
+// 		font-size: @scale*1024px;
+//   	}
+// }
+// @media (min-width:1349px){
+//   	html{
+// 		font-size: @scale*1349px;
+//   	}
+// }
 
 // 不带参数的混和样式
 
