--- a/about/index.less
+++ b/about/index.less
@@ -182,6 +182,10 @@ html {
 		    	height: 1em;
 		    	margin-right: 20/@size;
 		    }
+
+		    a:hover{
+		    	color: @rcolor;
+		    }
 		}
   	}
 
