--- a/_includes/_partials/page-header.html
+++ b/_includes/_partials/page-header.html
@@ -6,8 +6,8 @@
       {{ __.title.categories }}
     {% elsif page.type == "tags" and page.title == nil %}
       {{ __.title.tags }}
-    {% elsif page.type == "about" and page.title == nil %}
-      {{ '' }}
+<!--     {% elsif page.type == "about" and page.title == nil %}
+      {{ __.title.about }} -->
     {% else %}
       {{ page.title }}
     {% endif %}
