--- a/_sass/_schemes/Mist/_base.scss
+++ b/_sass/_schemes/Mist/_base.scss
@@ -6,6 +6,8 @@ p { margin: 0 0 25px 0; }
 
 a { border-bottom-color: $grey-light; }
 
+.links-of-author a:before{ display:none; }
+
 hr {
   margin: 20px 0;
   height: 2px;
