renew resume css

--- a/about/index.css
+++ b/about/index.css
@@ -160,7 +160,7 @@ html {
   font-size: 0.4rem;
   color: #fff;
   line-height: 0.7rem;
-  text-align: left;
+  text-align: justify;
   text-indent: 2em;
   padding: 0 2.4rem;
   margin-bottom: 0.3rem;
