--- a/about/index.less
+++ b/about/index.less
@@ -213,7 +213,7 @@ html {
 			font-size: 50/@size;
 			color: @wcolor;
 			line-height: 87.5/@size;
-			text-align: left;
+			text-align: justify;
 			text-indent: 2em;
 			padding: 0 300/@size;
 			margin-bottom: 37.5/@size;
