--- a/jnshu/mytask2/index.css
+++ b/jnshu/mytask2/index.css
@@ -182,7 +182,7 @@ nav .title {
   font-size: 1.15384615rem;
   font-family: 'Hiragino Sans GB';
   line-height: 2.07692308rem;
-  padding: 3.84615385rem 3.53846154rem;
+  padding: 3.84615385rem 3.53846154rem 6.53846154rem;
   text-align: left;
 }
 .content .intro div {
