--- a/jnshu/mytask2/index.less
+++ b/jnshu/mytask2/index.less
@@ -253,7 +253,7 @@ nav{
 		font-size: 30/@fontsize*1rem;
 		font-family: 'Hiragino Sans GB';
 		line-height: 54/@fontsize*1rem;
-		padding: 100/@fontsize*1rem 92/@fontsize*1rem;
+		padding: 100/@fontsize*1rem 92/@fontsize*1rem 170/@fontsize*1rem;
 		text-align: left;
 	}
 
