--- a/about/index.less
+++ b/about/index.less
@@ -217,6 +217,10 @@ html {
 			text-indent: 2em;
 			padding: 0 300/@size;
 			margin-bottom: 37.5/@size;
+
+			a:hover{
+				color: @rcolor;
+			}
 		}
 
 		p:nth-of-type(1){
