add countdown timer post

--- a/exercise/CountdownTimer/index.less
+++ b/exercise/CountdownTimer/index.less
@@ -47,11 +47,11 @@ html {
 		font-size: @scale*1024px;
   	}
 }
-@media (min-width:1349px){
-  	html{
-		font-size: @scale*1349px;
-  	}
-}
+// @media (min-width:1349px){
+//   	html{
+// 		font-size: @scale*1349px;
+//   	}
+// }
 
 .content{
 	width:500/@size;
